--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Sumuel Tripura</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio veritatis voluptatibus impedit aut ab nemo dignissimos iusto aliquam obcaecati quidem 
         inventore nihil delectus, odio veniam quas architecto. Eum, ipsum ad?</p>
+    <p>sumu sumu</p>
 </body>
 </html>
